--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,9 +8,24 @@ on:
 
 jobs:
 
+  test:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x, 16.x]
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Testing using Supertest
+      run: docker build . --file Dockerfile.dev --tag snowowl8/node-supertest:test
+
+
+
   build:
 
     runs-on: ubuntu-latest
+    needs: [test]
 
     steps:
     - uses: actions/checkout@v2
